design.css
@import url('///fonts.googleapis.com/css2?family=Racing+Sans+One');
@import url('///fonts.googleapis.com/css2?family=Kristi&display=swap');

:root {
    --radius: 15px;
}

.no-scroll-bar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
}

.no-scroll-bar::-webkit-scrollbar {
    display: none;
}

body {
    background-image: url("bg.png");
    background-color: #ffffff;
}

#page {
    background-color: #ffffff;
    scroll-snap-type: y mandatory;
    height: 100vh;
    overflow-y: scroll;
}

@media (min-height: 600px) {
    #bumper {
        scroll-snap-align: start !important;
    }

    #testimonials {
        scroll-snap-align: start !important;
    }

    .pricing-option {
        scroll-snap-align: start !important;
    }
}


#bumper {
    background-image: url("banner.webp");
    background-position: center top;
    background-size: cover;
    background-repeat: no-repeat;
}

.button {
    display: block;
    height: 60px;
    border-radius: var(--radius);
    font-size: 3em;
    line-height: 50px;
    text-align: center;

    border: 1px solid #dedede;
    background-color: white;
    color: hotpink;
}

.button:active {
    background-color: hotpink;
    color: white;
    border: 1px solid #777;
    box-shadow: inset 1px 2px 5px #777;
}

#bumper #carey {
    border-radius: 50%;
    height: 175px;
}

#bumper {
    font-family: "Racing Sans One";
}

#bumper .title {
    font-size: 5fr;

    color: #ffffff;
    text-shadow: -1px -1px 0 #666666,
    1px -1px 0 #666666,
    -1px 1px 0 #666666,
    1px 1px 0 #666666;
}

#bumper .title h1,
#bumper .title h2 {
    display: block;
    width: 250px;
    text-align: center;
}

#bumper .title h1 {
    font-size: 2em;
}

#bumper .title h2 {
    font-size: 1.6em;
}

#testimonials * {
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
}

#testimonials {
    padding-left: 100px;
    padding-right: 100px;
}

#testimonials img {


    border-radius: 50%;
    max-width: 140px;
    max-height: 140px;

    z-index: 1000;
}

.testimonial > div {
    border-left: 1px solid #cccccc;
    border-right: 1px solid #dedede;

    padding-left: 0.7em;
    padding-right: 0.7em;
}

.testimonial > div:first-of-type {
    font-size: larger;
}

.testimonial > div:first-of-type,
.testimonial > div:last-of-type {
    border-radius: 0;
}

.testimonial > div:first-of-type {
    padding-top: 70px;
    border-top: 1px solid #dedede;

    border-top-left-radius: var(--radius);
    border-top-right-radius: var(--radius);
}

.testimonial > div:last-of-type {
    border-bottom: 1px solid #dedede;
    border-bottom-left-radius: var(--radius);
    border-bottom-right-radius: var(--radius);

    padding: 0.5em;
    font-size: 1.2em;
    text-align: right;
}

.testimonial .quote {

}

.testimonial .customer {
    text-transform: uppercase;
    background-image: url("bg.png");
}

.testimonial .customer sub {
    display: block;
    font-size: .7em;
}

.hs {
    overflow-x: scroll;
    /*scroll-snap-type: x proximity;*/
    scroll-snap-type: x mandatory;
}

.hs > * {
    scroll-snap-align: center;
}

.pricing-option {
    border: 1px solid #cccccc;
    border-radius: var(--radius);
}

.pricing-option * {
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
}

.pricing-option ul {
    font-size: larger;
}

.pricing-option h1 {
    font-family: "Racing Sans One";
    color: #777777;
    padding: 0.7em;
    text-align: center;
}

.pricing-option h2 {
    margin-top: 20px;
    text-align: center;
    color: goldenrod;
    font-size: 1.2em;
}

.pricing-option p {
    margin-left: 14px;
    margin-right: 14px;
}

button {
    cursor: pointer;

    width: 100%;
    height: 60px;

    border-top: 1px solid #dfdfdf;
    border-right: 1px solid #ffffff;
    border-bottom: 1px solid #ffffff;
    border-left: 1px solid #ffffff;
    border-bottom-right-radius: var(--radius);
    border-bottom-left-radius: var(--radius);


    font-size: 3em;
    line-height: 50px;
    text-align: center;
}

button > span:first-of-type {
    font-family: "Racing Sans One";
    color: hotpink;
    text-decoration: line-through;
    margin-right: 12px;
}

button > span:nth-of-type(2) {
    font-weight: lighter;
    font-size: 1em;
    color: #777777;
}

button + span {
    display: block;
    width: 90%;
    margin: auto;
    line-height: 2em;

    background-color: #dedede;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;

    text-align: center;
    text-transform: lowercase;
}

#legal {
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
    padding-top: 5em;
    font-size: 0.8em;
    color: #666666;
    text-align: center;
}

#pricing-options ul {
    list-style-type: none;
}

#pricing-options ul > li > span {
    display: inline-block;
    width: 30px;
    height: 30px;
    line-height: 30px;
    border: 1px solid hotpink;
    color: mediumseagreen;
    border-radius: 50%;
    text-align: center;
    margin-right: 15px;
}

